crates/compiler/tests/parse_errors/list_pattern_open.txt
-- UNFINISHED LIST PATTERN ---------------------------------------- src/Main.elm

I just saw an open square bracket, but then I got stuck here:

4|   [
      ^
Try adding a ] to see if that helps?

Note: I can get confused by indentation in cases like this, so maybe there is
something next, but it is not indented enough?

